*Recreated the interactions with the login experience to make it more intuitive.
*Several bug fixes and performance improvements.