@@ -61,6 +61,9 @@
             android:label="@string/title_activity_portrait"
             android:screenOrientation="portrait" />
 
+        <service
+            android:name=".core.DeviceInfoService"
+            android:exported="false"></service>
     </application>
 
 </manifest>
