@@ -6,6 +6,7 @@ import dagger.Component;
 import digify.tv.DigifyApp;
 import digify.tv.api.HostSelectionInterceptor;
 import digify.tv.api.RetrofitHelper;
+import digify.tv.core.DeviceInfoService;
 import digify.tv.db.MediaRepository;
 import digify.tv.injection.module.ApplicationModule;
 import digify.tv.jobs.FetchPlaylistJob;
@@ -43,4 +44,5 @@ public interface ApplicationComponent {
     void inject(HostSelectionInterceptor hostSelectionInterceptor);
     void inject(FetchSettingsJob fetchSettingsJob);
     void inject(GetDeviceInfoJob getDeviceInfoJob);
+    void inject(DeviceInfoService deviceInfoService);
 }
